--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-Flask==2.3.3
-pandas==2.0.3
-numpy==1.24.3
-scikit-learn==1.3.0
-transformers==4.33.2
-torch==2.0.1
-plotly==5.16.1
-matplotlib==3.7.2
-seaborn==0.12.2
-Werkzeug==2.3.7
-gunicorn==21.2.0
-scipy==1.11.2
+Flask>=3.0.0
+pandas>=2.0.0
+numpy>=1.24.0
+scikit-learn>=1.3.0
+plotly>=5.16.0
+scipy>=1.11.0
+werkzeug>=3.0.0
+gunicorn>=21.0.0
