--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,29 @@
-Flask>=3.0.0
-pandas>=2.0.0
-numpy>=1.24.0
-scikit-learn>=1.3.0
-plotly>=5.16.0
-scipy>=1.11.0
-werkzeug>=3.0.0
-gunicorn>=21.0.0
+Flask==2.3.2
+transformers==4.30.2
+torch==2.0.1
+pandas==2.0.3
+numpy==1.24.3
+scipy==1.10.1
+plotly==5.15.0
+Werkzeug==2.3.6
+Jinja2==3.1.2
+click==8.1.3
+itsdangerous==2.1.2
+MarkupSafe==2.1.3
+packaging==23.1
+PyYAML==6.0
+regex==2023.6.3
+requests==2.31.0
+certifi==2023.5.7
+charset-normalizer==3.1.0
+filelock==3.12.2
+fsspec==2023.6.0
+huggingface-hub==0.15.1
+idna==3.4
+mpmath==1.3.0
+networkx==3.1
+sympy==1.12
+tokenizers==0.13.3
+tqdm==4.65.0
+typing-extensions==4.6.3
+urllib3==2.0.3
