--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,16 @@
 services:
   - type: web
-    name: vet-review-analysis
+    name: veterinary-bert-analysis
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
     plan: free
-    autoDeploy: false
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn --config gunicorn.conf.py app:app
     envVars:
+      - key: PYTHON_VERSION
+        value: 3.9.16
       - key: FLASK_ENV
         value: production
-      - key: FLASK_DEBUG
-        value: false
+      - key: PORT
+        generateValue: true
+    healthCheckPath: /
+    autoDeploy: true
